changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

utils/mapper.c: Change // style comment to /**/ style. Add missing include. Make
  some variables and functions static (fixing GCC warnings about missing
  prototypes). Change some 0 to NULL for pointers to make code clearer.
Arvid Norlander 2009-02-08

utils/mapper.c: Change all sprintf() to snprintf(). Also fix a crash due to
  division by zero when using -limit and we didn't get as far as processing any
  maps with non-zero elevation.
Arvid Norlander 2009-02-08

utils/mapper.c: Remove some unused variables. Get rid of zero length snprintf()
  (caused GCC warning).
Arvid Norlander 2009-02-08

include/libproto.h, common/dialog.c, common/init.c, common/object.c,
  common/button.c, common/region.c, common/living.c, common/time.c,
  common/recipe.c, common/map.c, common/arch.c, common/treasure.c: Make a lot
  of functions that aren't used outside one file in common/ static.
Arvid Norlander 2009-02-07

common/readable.c, common/object.c, common/map.c, include/libproto.h: Use size_t
  instead of int for buffer sizes.
common/readable.c, include/libproto.h: Make some functions not used elsewhere
  static.
common/readable.c: Get rid of sprintf().
Arvid Norlander 2009-02-07

common/porting.c: Fix format string.
Arvid Norlander 2009-02-07

common/player.c: Remove unused variables.
Arvid Norlander 2009-02-07

types/mood_floor/mood_floor.c: Use NULL instead of 0 for pointers.
types/player_mover/player_mover.c: Assigning a floating point constant to an
  integer variable makes no sense.
Arvid Norlander 2009-02-07

include/libproto.h, include/ob_methods.h, include/typesproto.h,